crates/biome_service/src/snapshots/biome_service__workspace__tests__debug_module_graph.snap
---
source: crates/biome_service/src/workspace.tests.rs
expression: result
---
GetModuleGraphResult {
    data: {
        "/project/utils.js": Js(
            SerializedJsModuleInfo {
                static_imports: {},
                static_import_paths: {},
                dynamic_imports: {},
                exports: {
                    "debounce",
                    "filter",
                },
                referenced_classes: {},
            },
        ),
        "/project/dynamic.js": Js(
            SerializedJsModuleInfo {
                static_imports: {},
                static_import_paths: {},
                dynamic_imports: {},
                exports: {
                    "squash",
                },
                referenced_classes: {},
            },
        ),
        "/project/file.js": Js(
            SerializedJsModuleInfo {
                static_imports: {
                    "debounce": "./utils.js",
                    "filter": "./utils.js",
                },
                static_import_paths: {
                    "./utils.js": "./utils.js",
                },
                dynamic_imports: {
                    "./dynamic.js",
                },
                exports: {},
                referenced_classes: {},
            },
        ),
    },
}
