crates/biome_service/src/snapshots/biome_service__workspace__tests__debug_module_graph_mixed_project.snap
---
source: crates/biome_service/src/workspace.tests.rs
expression: sorted
---
{
    "/project/App.jsx": Js(
        SerializedJsModuleInfo {
            static_imports: {},
            static_import_paths: {
                "./styles.css": "/project/styles.css",
            },
            dynamic_imports: {},
            exports: {
                "default",
            },
            referenced_classes: {
                "button",
            },
        },
    ),
    "/project/page.html": Html(
        SerializedHtmlModuleInfo {
            style_classes: {},
            referenced_classes: {
                "container",
            },
        },
    ),
    "/project/styles.css": Css(
        SerializedCssModuleInfo {
            imports: {},
            classes: {
                "button",
                "container",
            },
        },
    ),
}
