crates/biome_service/src/snapshots/biome_service__workspace__tests__debug_registered_types.snap
---
source: crates/biome_service/src/workspace.tests.rs
expression: result.unwrap()
---

TypeId(0) => instanceof unresolved reference "Person" (scope ID: 0)

TypeId(1) => Constructor {
    type_parameters: [],
    parameters: [
        ConstructorParameter {
            parameter: Named(
                NamedFunctionParameter {
                    name: "name",
                    ty: Resolved(
                        Global(
                            GlobalTypeId(
                                TypeId(
                                    5,
                                ),
                            ),
                        ),
                    ),
                    is_optional: false,
                    is_rest: false,
                },
            ),
            accessibility: None,
        },
        ConstructorParameter {
            parameter: Named(
                NamedFunctionParameter {
                    name: "age",
                    ty: Resolved(
                        Global(
                            GlobalTypeId(
                                TypeId(
                                    4,
                                ),
                            ),
                        ),
                    ),
                    is_optional: false,
                    is_rest: false,
                },
            ),
            accessibility: None,
        },
    ],
    return_type: None,
}
