crates/biome_service/src/snapshots/biome_service__workspace__tests__debug_semantic_model.snap
---
source: crates/biome_service/src/workspace.tests.rs
expression: result.unwrap()
---
Scope {
  id: ScopeId(1) @ 1..242
  children: [
    Scope {
      id: ScopeId(2) @ 1..87
      children: [
        Binding {
          Id: BindingId(1) @ 14..18
          Scope: ScopeId(2)
          Imported: false
          Exported: false
          Kind: Value
          ident: name
        }
        Binding {
          Id: BindingId(2) @ 28..31
          Scope: ScopeId(2)
          Imported: false
          Exported: false
          Kind: Value
          ident: age
        }
        Scope {
          id: ScopeId(3) @ 49..87
          children: []
        }
      ]
    }
    Binding {
      Id: BindingId(0) @ 10..13
      Scope: ScopeId(2)
      Imported: false
      Exported: false
      Kind: Function
      ident: foo
    }
    Scope {
      id: ScopeId(4) @ 88..242
      children: [
        Scope {
          id: ScopeId(5) @ 142..240
          children: [
            Binding {
              Id: BindingId(4) @ 154..158
              Scope: ScopeId(5)
              Imported: false
              Exported: false
              Kind: Value
              ident: name
            }
            Binding {
              Id: BindingId(5) @ 168..171
              Scope: ScopeId(5)
              Imported: false
              Exported: false
              Kind: Value
              ident: age
            }
            Scope {
              id: ScopeId(6) @ 181..240
              children: []
            }
          ]
        }
      ]
    }
    Binding {
      Id: BindingId(3) @ 94..100
      Scope: ScopeId(4)
      Imported: false
      Exported: false
      Kind: Class
      ident: Person
    }
  ]
}
